<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_history_txt_titulo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_history_txt_descripcion"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_history_txt_empty"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:paddingTop="32dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImcHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
