<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.urasweb.aqualife.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.urasweb.aqualife.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_personal_info"
        android:name="com.urasweb.aqualife.ui.personalinfo.PersonalInfoFragment"
        android:label="@string/menu_personal_info"
        tools:layout="@layout/fragment_personal_info" />

    <fragment
        android:id="@+id/nav_imc_new"
        android:name="com.urasweb.aqualife.ui.imc_new.IMCNewFragment"
        android:label="Nuevo IMC"
        tools:layout="@layout/fragment_imc_new" />

    <fragment
        android:id="@+id/nav_imc_historic"
        android:name="com.urasweb.aqualife.ui.imc_historic.IMCHistoricFragment"
        android:label="IMC Histórico"
        tools:layout="@layout/fragment_imc_historic" />

    <fragment
        android:id="@+id/nav_measure"
        android:name="com.urasweb.aqualife.ui.measures.MeasureFragment"
        android:label="Medias"
        tools:layout="@layout/fragment_measure" />

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.urasweb.aqualife.ui.reminders.ReminderFragment"
        android:label="Recordatorios"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/nav_setup"
        android:name="com.urasweb.aqualife.ui.setup.SetupFragment"
        android:label="@string/menu_personal_info"
        tools:layout="@layout/fragment_setup" />
</navigation>